# FanGuardianUI

./: README.md  custom_partitions.csv  platformio.ini
assets/for-platformio/: wt32-sc01-plus.json
assets/for-squarelinestudio/wt32_sc01_plus/: wt32_sc01_plus.slb
include/: lv_i18n.h  lv_i18n.template.c
squarelinestudio/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  Themes.slt
src/: fanguardian_common.cpp  fanguardian_common.h  helpers.cpp  helpers.h  led_functions.cpp  led_functions.h  lv_conf.h  main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_themes.cpp  ui_themes.h
src/ui/images/: ui_img_aether_png.c  ui_img_afterburner_png.c  ui_img_divinity_png.c  ui_img_final_hours_png.c  ui_img_gaia_png.c  ui_img_jade_png.c  ui_img_napier_png.c  ui_img_nibiru_png.c  ui_img_pbdisplay3_png.c  ui_img_plasmatic_png.c  ui_img_sclogosmall_png.c  ui_img_singularity_png.c  ui_img_war_png.c
src/ui/screens/: ui_AboutScreen.c  ui_AlertSettingsScreen.c  ui_FanControllerScreen.c  ui_IntermediateBlack.c  ui_LedSettingsScreen.c  ui_LogoScreen.c  ui_MainScreen.c  ui_SettingsScreen.c
